added explicit rules for asn1_err.[ch]
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5295 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/asn1/Makefile.am
+++ b/lib/asn1/Makefile.am
@@ -157,3 +157,7 @@ $(libasn1_la_OBJECTS): asn1.h asn1_err.h
 	$(COMPILE_ET) $<
 .et.c:
 	$(COMPILE_ET) $<
+
+asn1_err.h: asn1_err.et
+
+asn1_err.c: asn1_err.et
