added explicit rules for kadm5_err.[ch]
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5300 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kadm5/Makefile.am
+++ b/lib/kadm5/Makefile.am
@@ -95,3 +95,7 @@ all-local: $(inc_DATA)
 $(libkadm5srv_la_OBJECTS): kadm5_err.h
 
 client_glue.lo server_glue.lo: $(srcdir)/common_glue.c
+
+kadm5_err.h: kadm5_err.et
+
+kadm5_err.c: kadm5_err.et
