--- a/appl/kx/rxtelnet.in
+++ b/appl/kx/rxtelnet.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # $Id$
 #
-usage="Usage: $0 [-l username] [-k] [-t args_to_telnet] [-x args_to_xterm] [-w term_emulator] host [port]"
+usage="Usage: $0 [-l username] [-k] [-t args_to_telnet] [-x args_to_xterm] [-w term_emulator] [-n] host [port]"
 term=
 kx_args=-P
 while true
