--- a/appl/kx/rxtelnet.in
+++ b/appl/kx/rxtelnet.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # $Id$
 #
-usage="Usage: $0 [-l username] [-k] [-t args_to_telnet] [-x args_to_xterm] [-w term_emulator] [-n] host [port]"
+usage="Usage: $0 [-l username] [-k] [-t args_to_telnet] [-x args_to_xterm] [-w term_emulator] [-n] [-v] [-h | --help] [--version] host [port]"
 term=
 kx_args=-P
 while true
@@ -13,6 +13,10 @@ do
   -k) kx_args="${kx_args} -k"; shift;;
   -n) term=none; shift;;
   -w) term=$2; shift 2;;
+  --version) echo "$0: %PACKAGE% %VERSION%"; exit 0;;
+  -h) echo $usage; exit 0;;
+  --help) echo $usage; exit 0;;
+  -v) set -x; shift;;
   -*) echo "$0: Bad option $1"; echo $usage; exit 1;;
   *) break;;
   esac
