configure configure.in: Fixed bugs in the SSL configure changes. lib/util_unistr.c: libsmb/smbencrypt.c: rpc_parse/parse_misc.c: rpc_parse/parse_prs.c: rpc_parse/parse_reg.c: rpc_parse/parse_rpc.c: Ensured that unicode strings are always little-endian  and are not re-converted for transport over the wire. Jeremy.

--- a/source/configure.in
+++ b/source/configure.in
@@ -1159,7 +1159,8 @@ AC_ARG_WITH(ssl,
     fi
 
     if test ! -d ${withval}; then
-      { echo "configure: error: called with --with-ssl, but ssl base directory ${withval} does not exist or is not a directory. Aborting config" 1>&2; exit 1 }
+      echo "configure: error: called with --with-ssl, but ssl base directory ${withval} does not exist or is not a directory. Aborting config" 1>&2
+      exit 1
     fi 
 
     CFLAGS="-DHAVE_CRYPT_DECL $CFLAGS"  # Damn, SSLeay defines its own
