add snprintf.o to make_cmds
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5330 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/sl/Makefile.in
+++ b/lib/sl/Makefile.in
@@ -60,7 +60,7 @@ LIBADD = strtok_r.o snprintf.o
 
 LIB_OBJECTS = sl.o ss.o $(LIBADD)
 
-mk_cmds_OBJECTS = make_cmds.o parse.o lex.o
+mk_cmds_OBJECTS = make_cmds.o parse.o lex.o snprintf.o
 
 OBJECTS = $(LIB_OBJECTS) $(mk_cmds_OBJECTS)
 
