--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -77,7 +77,7 @@ FLAGS  = $(ISA) $(FLAGS5) $(PASSWD_FLAGS)
 FLAGS32  = $(ISA32) $(FLAGS5) $(PASSWD_FLAGS)
 
 SPROGS = bin/smbd bin/nmbd bin/swat
-PROGS1 = bin/smbclient bin/testparm bin/testprns bin/smbrun bin/smbstatus 
+PROGS1 = bin/smbclient bin/testparm bin/testprns bin/smbstatus @RUNPROG@
 PROGS2 = bin/rpcclient bin/smbpasswd bin/make_smbcodepage @WRAP@ @WRAP32@
 MPROGS = @MPROGS@
 PROGS = $(PROGS1) $(PROGS2) $(MPROGS) bin/nmblookup bin/make_printerdef 
