--- a/lib/roken/Makefile.in
+++ b/lib/roken/Makefile.in
@@ -40,6 +40,8 @@ SOURCES = \
 	chown.c \
 	concat.c \
 	daemon.c \
+	emalloc.c \
+	erealloc.c \
 	err.c \
 	errx.c \
 	fchown.c \
@@ -69,6 +71,7 @@ SOURCES = \
 	parse_units.c \
 	print_version.c \
 	putenv.c \
+	resolve.c \
 	rcmd.c \
 	roken_gethostby.c \
 	readv.c \
@@ -108,6 +111,8 @@ EXTRA_SOURCES = \
 OBJECTS = \
 	base64.o \
 	concat.o \
+	emalloc.o \
+	erealloc.o \
 	get_window_size.o \
 	getarg.o \
 	inaddr2str.o \
@@ -120,6 +125,7 @@ OBJECTS = \
 	parse_time.o \
 	parse_units.o \
 	print_version.o \
+	resolve.o \
 	roken_gethostby.o \
 	strcat_truncate.o \
 	strcpy_truncate.o \
