(libroken_la_SOURCES): add emalloc and erealloc
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5339 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -15,6 +15,8 @@ make_print_version_LDADD = $(LIB_krb4)
 libroken_la_SOURCES =		\
 	base64.c		\
 	concat.c		\
+	emalloc.c		\
+	erealloc.c		\
 	get_window_size.c	\
 	getarg.c		\
 	inaddr2str.c		\
