(pfrom): use libexecdir
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5373 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/Makefile.in
+++ b/appl/push/Makefile.in
@@ -87,7 +87,7 @@ push$(EXECSUFFIX): $(push_OBJECTS)
 	$(LINK) $(LD_FLAGS) $(LDFLAGS) -o $@ $(push_OBJECTS) $(KLIB) $(LIBROKEN) $(LIBS) $(LIBROKEN)
 
 pfrom: pfrom.in
-	sed -e "s!%bindir%!$(bindir)!" $(srcdir)/pfrom.in > $@
+	sed -e "s!%libexecdir%!$(libexecdir)!" $(srcdir)/pfrom.in > $@
 	chmod +x $@
 
 $(OBJECTS): ../../include/config.h
