--- a/lib/hdb/Makefile.am
+++ b/lib/hdb/Makefile.am
@@ -15,6 +15,9 @@ foo = asn1_Key.x asn1_Event.x asn1_HDBFlags.x asn1_hdb_entry.x asn1_Salt.x
 
 CLEANFILES = $(BUILT_SOURCES) $(foo) hdb_asn1.h asn1_files
 
+noinst_PROGRAMS = convert_db
+LDADD = libhdb.la ../krb5/libkrb5.la ../asn1/libasn1.la ../des/libdes.la ../roken/libroken.la
+
 lib_LTLIBRARIES = libhdb.la
 
 libhdb_la_SOURCES = hdb.c common.c db.c ndbm.c $(BUILT_SOURCES)
