--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,7 @@ AC_CONFIG_AUX_DIR_DEFAULT
 if test "`uname`" = AIX; then
 	INSTALL="$ac_install_sh"
 fi
-AM_INIT_AUTOMAKE(heimdal,0.1a)
+AM_INIT_AUTOMAKE(heimdal,0.1b)
 
 AC_PREFIX_DEFAULT(/usr/heimdal)
 
