--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -35,7 +35,7 @@ foo_DATA =					\
 	xdbm.h					\
 	@EXTRA_HDRS@
 
-EXTRA_DATA = err.h fnmatch.h
+EXTRA_DATA = err.h fnmatch.h glob.h
 
 CLEANFILES = $(foo_DATA) asn1.h asn1_err.h hdb_asn1.h hdb_err.h heim_err.h \
 	     krb5_err.h roken.h
@@ -63,6 +63,8 @@ fnmatch.h:
 	$(LN_S) $(top_srcdir)/lib/roken/fnmatch.h .
 getarg.h:
 	$(LN_S) $(top_srcdir)/lib/roken/getarg.h .
+glob.h:
+	$(LN_S) $(top_srcdir)/lib/roken/glob.h .
 gssapi.h:
 	$(LN_S) $(top_srcdir)/lib/gssapi/gssapi.h .
 hdb.h:
