-O does not belong in WFLAGS
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5421 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -40,7 +40,7 @@ AM_PROG_LIBTOOL
 
 if test "$GCC" = "yes"; then
 # -Wcast-align doesn't work well on alpha osf/1
-  WFLAGS="-Wall -Wmissing-prototypes -Wpointer-arith -Wbad-function-cast -Wmissing-declarations -Wnested-externs -O"
+  WFLAGS="-Wall -Wmissing-prototypes -Wpointer-arith -Wbad-function-cast -Wmissing-declarations -Wnested-externs"
   WFLAGS_NOUNUSED="-Wno-unused"
 fi
 AC_SUBST(WFLAGS)
