pfrom should be a script and not a program
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5430 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/Makefile.am
+++ b/appl/push/Makefile.am
@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = no-dependencies foreign
 
 INCLUDES = -I$(top_builddir)/include $(INCLUDE_krb4) @HESIODINCLUDE@
 
-bin_PROGRAMS		= pfrom
+bin_SCRIPTS		= pfrom
 
 libexec_PROGRAMS	= push
 
