--- a/appl/Makefile.am
+++ b/appl/Makefile.am
@@ -1,5 +1,5 @@
 # $Id$
 
 AUTOMAKE_OPTIONS = foreign no-dependencies 
-SUBDIRS = afsutil ftp login popper push rsh telnet test
+SUBDIRS = afsutil ftp login @OTP_dir@ popper push rsh telnet test
 # kauth kx
