--- a/admin/Makefile.am
+++ b/admin/Makefile.am
@@ -15,6 +15,7 @@ ktutil_SOURCES = ktutil.c srvconvert.c
 LIB_tgetent = @LIB_tgetent@
 
 LDADD = \
+	$(top_builddir)/lib/kadm5/libkadm5clnt.la \
 	$(top_builddir)/lib/krb5/libkrb5.la \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
