protos for {un,}setenv
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5479 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -132,11 +132,11 @@ extern "C" {
 int putenv(const char *string);
 #endif
 
-#ifndef HAVE_SETENV
+#if !defined(HAVE_SETENV) || defined(NEED_SETENV_PROTO)
 int setenv(const char *var, const char *val, int rewrite);
 #endif
 
-#ifndef HAVE_UNSETENV
+#if !defined(HAVE_UNSETENV) || defined(NEED_UNSETENV_PROTO)
 void unsetenv(const char *name);
 #endif
 
