@WFLAGS@ -> $(WFLAGS) in CFLAGS
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5491 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/Makefile.in
+++ b/appl/ftp/Makefile.in
@@ -11,7 +11,7 @@ SHELL		= /bin/sh
 CC 	= @CC@
 RANLIB 	= @RANLIB@
 DEFS 	= @DEFS@
-CFLAGS 	= @CFLAGS@ @WFLAGS@
+CFLAGS 	= @CFLAGS@ $(WFLAGS)
 WFLAGS = @WFLAGS@
 
 INSTALL = @INSTALL@
