--- a/lib/auth/afskauthlib/Makefile.in
+++ b/lib/auth/afskauthlib/Makefile.in
@@ -13,7 +13,7 @@ AR = ar
 LN_S = @LN_S@
 RANLIB = @RANLIB@
 DEFS = @DEFS@
-CFLAGS = @CFLAGS@ @WFLAGS@
+CFLAGS = @CFLAGS@ $(WFLAGS)
 WFLAGS = @WFLAGS@
 
 INSTALL = @INSTALL@
