--- a/lib/roken/Makefile.in
+++ b/lib/roken/Makefile.in
@@ -13,7 +13,7 @@ CPP	= @CPP@
 AR	= ar
 RANLIB	= @RANLIB@
 DEFS	= @DEFS@
-CFLAGS	= @CFLAGS@ @WFLAGS@
+CFLAGS	= @CFLAGS@ $(WFLAGS)
 WFLAGS	= @WFLAGS@
 AWK	= @AWK@
 
