--- a/appl/otp/Makefile.in
+++ b/appl/otp/Makefile.in
@@ -10,7 +10,7 @@ CC = @CC@
 LINK = @LINK@
 RANLIB = @RANLIB@
 DEFS = @DEFS@
-CFLAGS = @CFLAGS@ @WFLAGS@
+CFLAGS = @CFLAGS@ $(WFLAGS)
 WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 INSTALL = @INSTALL@
