--- a/appl/xnlock/Makefile.in
+++ b/appl/xnlock/Makefile.in
@@ -14,7 +14,7 @@ CC = @CC@
 LINK = @LINK@
 RANLIB = @RANLIB@
 DEFS = @DEFS@ -DBINDIR='"$(bindir)"'
-CFLAGS = $(XINCS) @CFLAGS@ @WFLAGS@
+CFLAGS = $(XINCS) @CFLAGS@ $(WFLAGS)
 WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 LIBS = $(XLIBS) @LIBS@
