--- a/lib/des/Makefile.in
+++ b/lib/des/Makefile.in
@@ -13,7 +13,7 @@ AR = ar
 RANLIB = @RANLIB@
 LN_S = @LN_S@
 DEFS = @DEFS@
-CFLAGS = @CFLAGS@ @WFLAGS@
+CFLAGS = @CFLAGS@ $(WFLAGS)
 WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 LDSHARED = @LDSHARED@
