--- a/lib/kafs/Makefile.in
+++ b/lib/kafs/Makefile.in
@@ -13,7 +13,7 @@ AR = ar
 RANLIB = @RANLIB@
 LN_S = @LN_S@
 DEFS = @DEFS@ -DROKEN_RENAME -DLIBDIR='"$(libdir)"' @AFS_EXTRA_DEFS@
-CFLAGS = @CFLAGS@ @WFLAGS@
+CFLAGS = @CFLAGS@ $(WFLAGS)
 WFLAGS = @WFLAGS@
 
 INSTALL = @INSTALL@
