--- a/lib/sl/Makefile.in
+++ b/lib/sl/Makefile.in
@@ -15,7 +15,7 @@ AR = ar
 RANLIB = @RANLIB@
 LN_S = @LN_S@
 DEFS = @DEFS@ -DROKEN_RENAME
-CFLAGS = @CFLAGS@ @WFLAGS@
+CFLAGS = @CFLAGS@ $(WFLAGS)
 WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 YACC = @YACC@
