add -Wno-return-type to WFLAGS
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5494 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/kx/Makefile.in
+++ b/appl/kx/Makefile.in
@@ -13,7 +13,7 @@ LINK = @LINK@
 AR = ar
 DEFS = @DEFS@
 CFLAGS = @CFLAGS@ $(WFLAGS)
-WFLAGS = @WFLAGS@
+WFLAGS = @WFLAGS@ @WFLAGS_NORETURNTYPE@
 CPPFLAGS= $(XINCS) 
 LD_FLAGS = @LD_FLAGS@
 INSTALL = @INSTALL@
