--- a/appl/xnlock/Makefile.in
+++ b/appl/xnlock/Makefile.in
@@ -15,7 +15,7 @@ LINK = @LINK@
 RANLIB = @RANLIB@
 DEFS = @DEFS@ -DBINDIR='"$(bindir)"'
 CFLAGS = $(XINCS) @CFLAGS@ $(WFLAGS)
-WFLAGS = @WFLAGS@ @WFLAGS_NORETURNTYPE@
+WFLAGS = @WFLAGS@ @WFLAGS_NOIMPLICITINT@
 LD_FLAGS = @LD_FLAGS@
 LIBS = $(XLIBS) @LIBS@
 INSTALL = @INSTALL@
