--- a/appl/telnet/libtelnet/Makefile.in
+++ b/appl/telnet/libtelnet/Makefile.in
@@ -11,7 +11,8 @@ LINK = @LINK@
 AR = ar
 RANLIB = @RANLIB@
 DEFS = @DEFS@
-CFLAGS = @CFLAGS@
+CFLAGS = @CFLAGS@ $(WFLAGS)
+WFLAGS = @WFLAGS@
 LIBNAME = $(LIBPREFIX)telnet
 LIBEXT = a
 LIBPREFIX = @LIBPREFIX@
