--- a/appl/ftp/ftp/Makefile.in
+++ b/appl/ftp/ftp/Makefile.in
@@ -13,7 +13,8 @@ top_builddir		= ../../..
 CC 	= @CC@
 RANLIB 	= @RANLIB@
 DEFS 	= @DEFS@
-CFLAGS 	= @CFLAGS@
+CFLAGS 	= @CFLAGS@ $(WFLAGS)
+WFLAGS	= @WFLAGS@
 CPPFLAGS= @CPPFLAGS@ -I. -I$(srcdir) -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/include -I$(top_srcdir)/include -I$(srcdir)/../common  @INCLUDE_readline@
 LD_FLAGS = @LD_FLAGS@
 LIB_tgetent = @LIB_tgetent@
