Always build archive library!
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5523 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/com_err/Makefile.in
+++ b/lib/com_err/Makefile.in
@@ -38,8 +38,8 @@ build_symlink_command   = @build_symlink_command@
 install_symlink_command = @install_symlink_command@
 
 LIBNAME = $(LIBPREFIX)com_err
-#LIBEXT = a Always build archive library!
-LIBEXT = @LIBEXT@
+#LIBEXT = @LIBEXT@ Always build archive library!
+LIBEXT = a
 SHLIBEXT = @SHLIBEXT@
 LIBPREFIX = @LIBPREFIX@
 LDSHARED = @LDSHARED@
