--- a/lib/krb5/Makefile.am
+++ b/lib/krb5/Makefile.am
@@ -96,6 +96,7 @@ libkrb5_la_SOURCES = \
 	warn.c \
 	write_message.c \
 	$(ERR_FILES)
+libkrb5_la_LDFLAGS = -version-info 1:0:0
 
 
 $(libkrb5_la_OBJECTS): $(srcdir)/krb5-protos.h
